# cryptomonitor

./: .env.default  .gitignore  .gitmodules  Cargo.toml  LICENSE  readme.md
contracts/: foundry.toml
contracts/broadcast/ArbitrageBot.s.sol/1/: run-1741936404.json  run-1741939582.json  run-1741939589.json  run-1741939730.json  run-1741939803.json  run-1741939840.json  run-1741939966.json  run-1741940927.json  run-1741941509.json  run-1741941758.json  run-1741941919.json  run-1741941933.json  run-1741942234.json
contracts/broadcast/SwapUniswapV2.s.sol/1/: run-1741939226.json  run-1741939255.json  run-latest.json
contracts/script/: ArbitrageBot.s.sol  DeployMyProxy.s.sol  SwapUniswapV2.s.sol  v3Bot.s.sol
contracts/src/: ArbitrageBot.sol  MultiSigWallet.sol  MyERC1155.sol  MyNFT.sol  MyProxy.sol  MyToken.sol  UniswapV3Arbitrage.sol
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/examples/: create_pair.rs  deploy_erc1155.rs  deploy_erc20.rs  deploy_erc721.rs  deploy_from_artifact.rs  query_chainlink_ethusd.rs  subscribe_blocks.rs  subscribe_local_node.rs  subscribe_new_token.rs  subscribe_pending_transactions.rs  subscribe_transfer.rs  transfer_eth.rs  uniswap_v2_sandwich.rs
crates/core/src/: lib.rs  pair.rs  price.rs  swap.rs  token.rs
crates/learn_rust/: Cargo.toml
crates/learn_rust/examples/: test_arc_mutex.rs  test_args.rs  test_box.rs  test_clap_parser.rs  test_conversion.rs  test_default_trait.rs  test_display.rs  test_dynamic_dispatch.rs  test_future_tokio.rs  test_macro.rs  test_operator_trait.rs  test_process.rs  test_range.rs  test_rc.rs  test_rc_refcell.rs  test_redis.rs  test_reqwest.rs  test_serde.rs  test_shopping_cart.rs  test_thread.rs  test_thread_scope.rs  test_time.rs  test_vec.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
examples/: create_pair.rs  deploy_from_artifact.rs  query_tx.rs  subscribe_new_token.rs  subscribe_pending_transactions.rs  subscribe_transfer.rs  test.rs  uniswap_v2_sandwich.rs  uniswap_v2_sandwitch.rs
learn_rust/examples/: test_if_let.rs
src/: main.rs
