[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Myths"]
license = "MIT"
homepage = "https://github.com/coldhurt/cryptomonitor"
repository = "https://github.com/coldhurt/cryptomonitor"
exclude = ["benches/", "tests/"]


[workspace]
members = [
    "crates/*"
]
resolver = "3"

[workspace.dependencies]
alloy = { version = "0.11", features = [
    "eips",
    "full",
    "hyper",
    "json-rpc",
    "node-bindings",
    "rpc-client",
    "rpc-types-debug",
    "rpc-types-trace",
    "signer-aws",
    "signer-gcp",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }
dotenvy = "0.15.7"
eyre = "0.6.12"
futures-util = "0.3.31"
serde = "1.0.218"
serde_json = "1.0.139"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
utils = { path = "./crates/utils" }
monitor-core = { path = "./crates/core" }