[package]
name = "learn_rust"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
alloy = { workspace = true }
eyre = { workspace = true }
dotenvy = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
utils = { workspace = true }
redis = { version = "0.29.1", features = [ "tokio-comp" ] }